// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UITextfield renders correctly - autocomplete off 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="off"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - basic 1`] = `
<div>
  <div
    class="ui-textfield ui-textfield--large"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value="new test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - disabled 1`] = `
<div>
  <div
    class="ui-textfield ui-textfield--disabled"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        disabled=""
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - readonly 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with helper 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
    <span
      class="ui-textfield__helper"
    >
      test
    </span>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with id 1`] = `
<div>
  <div
    class="ui-textfield"
    id="test"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with label 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <label
      class="ui-textfield__label"
      for="z8a8d7a5zad4"
    >
      <strong>
        test
      </strong>
    </label>
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with left icon 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <i
        class="ui-textfield__wrapper__icon"
        role="button"
        tabindex="0"
      >
        star
      </i>
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with listener and debounce 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <i
        class="ui-textfield__wrapper__icon"
        role="button"
        tabindex="0"
      >
        star
      </i>
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value="new test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with listeners 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <i
        class="ui-textfield__wrapper__icon"
        role="button"
        tabindex="0"
      >
        star
      </i>
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value="new test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with placeholder 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        placeholder="test"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with right icon 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value=""
      />
      <i
        class="ui-textfield__wrapper__icon"
        role="button"
        tabindex="0"
      >
        star
      </i>
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with transform 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value="NEW TEST"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with type number 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        max="30"
        min="0"
        name="test"
        step="10"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with type text 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        maxlength="10"
        name="test"
        size="10"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextfield renders correctly - with value 1`] = `
<div>
  <div
    class="ui-textfield"
  >
    <div
      class="ui-textfield__wrapper"
    >
      <input
        autocomplete="on"
        class="ui-textfield__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        type="text"
        value="test"
      />
    </div>
  </div>
</div>
`;
